# quickserve

./: CHANGELOG.md  Cargo.toml  README  release.toml
.github/workflows/: release.yml
src/: main.rs
