[package]
name = "quickserve"
version = "0.2.0"
authors = ["Abin Simon <abinsimon10@gmail.com>"]
edition = "2018"

description ="Quickly serve a dir"
license ="Apache-2.0"
homepage = "https://github.com/meain/quickserve"
repository = "https://github.com/meain/quickserve"
categories = ["command-line-interface"]
keywords = [ "cli", "http-server"]
readme = "README"

[profile.release]
lto = true
codegen-units = 1

[dependencies]
tide = "0.11.0"
async-std = { version = "1.6.0", features = ["attributes"] }
argh = "0.1.3"
